fix(@vtmn/css): wrong color of close icon in text-input component

--- a/packages/sources/css/src/components/navigation/search/src/index.css
+++ b/packages/sources/css/src/components/navigation/search/src/index.css
@@ -96,8 +96,8 @@
   font-size: var(--vtmn-typo_title-5-font-size);
 }
 
-.vtmn-search_buttons > .vtmn-btn > span[class='vtmx-close-line'] {
-  color: var(--vtmn-semantic-color_content-tertiary);
+.vtmn-search_buttons > .vtmn-btn > span.vtmx-close-line {
+  color: var(--vtmn-semantic-color_content-tertiary) !important;
 }
 
 /* Sizes */
